--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About me. &#8212; Lovywinsy&#39;s Site  documentation</title>
+    <title>About me. &#8212; Ly&#39;s Site  documentation</title>
     <link rel="stylesheet" href="../_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     <script id="documentation_options" data-url_root="../" src="../_static/documentation_options.js"></script>
@@ -13,10 +13,11 @@
     <script src="../_static/underscore.js"></script>
     <script src="../_static/doctools.js"></script>
     <script src="../_static/language_data.js"></script>
+    <link rel="shortcut icon" href="../_static/favicon.ico"/>
     <link rel="author" title="About these documents" href="#" />
     <link rel="index" title="Index" href="../genindex/" />
     <link rel="search" title="Search" href="../search/" />
-    <link rel="prev" title="Welcome to Lovywinsy’s Blog!" href="../" />
+    <link rel="prev" title="Welcome to Ly’s Blog!" href="../" />
   
    
   <link rel="stylesheet" href="../_static/custom.css" type="text/css" />
@@ -61,7 +62,7 @@
       </div>
       <div class="sphinxsidebar" role="navigation" aria-label="main navigation">
         <div class="sphinxsidebarwrapper">
-<h1 class="logo"><a href="../">Lovywinsy's Site</a></h1>
+<h1 class="logo"><a href="../">Ly's Site</a></h1>
 
 
 
