--- a/about/index.html
+++ b/about/index.html
@@ -17,7 +17,7 @@
     <link rel="author" title="About these documents" href="#" />
     <link rel="index" title="Index" href="../genindex/" />
     <link rel="search" title="Search" href="../search/" />
-    <link rel="prev" title="&lt;no title&gt;" href="../" />
+    <link rel="prev" title="Welcome!" href="../" />
   
    
   <link rel="stylesheet" href="../_static/custom.css" type="text/css" />
