--- a/2021_new_start/index.html
+++ b/2021_new_start/index.html
@@ -117,6 +117,8 @@
 
 
 
+<p class="blurb">For the elapsed life pieces and code snippets</p>
+
 
 
 
@@ -130,6 +132,12 @@
 </h3>
 <ul>
    
+  <li>
+    <a href="../games/"
+      >22 November - Games</a
+    >
+  </li>
+  
   <li>
     <a href="../feed_dog_tips/"
       >30 June - 育狗指南</a
@@ -156,7 +164,7 @@
 <ul>
    
   <li>
-    <a href="../blog/2021/">2021 (2)</a>
+    <a href="../blog/2021/">2021 (3)</a>
   </li>
     
   <li>
