--- a/a_hand/index.html
+++ b/a_hand/index.html
@@ -97,6 +97,8 @@
 
 
 
+<p class="blurb">For the elapsed life pieces and code snippets</p>
+
 
 
 
@@ -110,6 +112,12 @@
 </h3>
 <ul>
    
+  <li>
+    <a href="../games/"
+      >22 November - Games</a
+    >
+  </li>
+  
   <li>
     <a href="../feed_dog_tips/"
       >30 June - 育狗指南</a
@@ -136,7 +144,7 @@
 <ul>
    
   <li>
-    <a href="../blog/2021/">2021 (2)</a>
+    <a href="../blog/2021/">2021 (3)</a>
   </li>
     
   <li>
