--- a/about/index.html
+++ b/about/index.html
@@ -76,6 +76,8 @@
 
 
 
+<p class="blurb">For the elapsed life pieces and code snippets</p>
+
 
 
 
@@ -89,6 +91,12 @@
 </h3>
 <ul>
    
+  <li>
+    <a href="../games/"
+      >22 November - Games</a
+    >
+  </li>
+  
   <li>
     <a href="../feed_dog_tips/"
       >30 June - 育狗指南</a
@@ -121,7 +129,7 @@
 <ul>
    
   <li>
-    <a href="../blog/2021/">2021 (2)</a>
+    <a href="../blog/2021/">2021 (3)</a>
   </li>
     
   <li>
