--- a/feed_dog_tips/index.html
+++ b/feed_dog_tips/index.html
@@ -120,6 +120,10 @@
   </span>
   <span>&nbsp;</span>
   <span style="float: right">
+     Next: 
+    <a href="../games/">
+      Games 
+    </a>
     
   </span>
 </div>
@@ -135,6 +139,8 @@
 
 
 
+<p class="blurb">For the elapsed life pieces and code snippets</p>
+
 
 
 
@@ -148,6 +154,12 @@
 </h3>
 <ul>
    
+  <li>
+    <a href="../games/"
+      >22 November - Games</a
+    >
+  </li>
+  
   <li>
     <a href="../2021_new_start/"
       >01 February - 旧的回忆，新的开始</a
@@ -174,7 +186,7 @@
 <ul>
    
   <li>
-    <a href="../blog/2021/">2021 (2)</a>
+    <a href="../blog/2021/">2021 (3)</a>
   </li>
     
   <li>
