--- a/genindex/index.html
+++ b/genindex/index.html
@@ -50,6 +50,8 @@
 
 
 
+<p class="blurb">For the elapsed life pieces and code snippets</p>
+
 
 
 
@@ -63,6 +65,18 @@
 </h3>
 <ul>
    
+  <li>
+    <a href="../2022_start_planning/"
+      >01 January - 2022 新年计划</a
+    >
+  </li>
+  
+  <li>
+    <a href="../games/"
+      >22 November - Games</a
+    >
+  </li>
+  
   <li>
     <a href="../feed_dog_tips/"
       >30 June - 育狗指南</a
@@ -81,12 +95,6 @@
     >
   </li>
   
-  <li>
-    <a href="../engineer_not_developer/"
-      >21 November - Engineer not Developer</a
-    >
-  </li>
-  
 </ul>
 
 <h3>
@@ -95,7 +103,11 @@
 <ul>
    
   <li>
-    <a href="../blog/2021/">2021 (2)</a>
+    <a href="../blog/2022/">2022 (1)</a>
+  </li>
+    
+  <li>
+    <a href="../blog/2021/">2021 (3)</a>
   </li>
     
   <li>
