--- a/a_hand/index.html
+++ b/a_hand/index.html
@@ -113,6 +113,12 @@
 <ul>
    
   <li>
+    <a href="../2022_start_planning/"
+      >01 January - 2022 新年计划</a
+    >
+  </li>
+  
+  <li>
     <a href="../games/"
       >22 November - Games</a
     >
@@ -143,6 +149,10 @@
 </h3>
 <ul>
    
+  <li>
+    <a href="../blog/2022/">2022 (1)</a>
+  </li>
+    
   <li>
     <a href="../blog/2021/">2021 (3)</a>
   </li>
