--- a/about/index.html
+++ b/about/index.html
@@ -92,6 +92,12 @@
 <ul>
    
   <li>
+    <a href="../2022_start_planning/"
+      >01 January - 2022 新年计划</a
+    >
+  </li>
+  
+  <li>
     <a href="../games/"
       >22 November - Games</a
     >
@@ -115,12 +121,6 @@
     >
   </li>
   
-  <li>
-    <a href="../engineer_not_developer/"
-      >21 November - Engineer not Developer</a
-    >
-  </li>
-  
 </ul>
 
 <h3>
@@ -128,6 +128,10 @@
 </h3>
 <ul>
    
+  <li>
+    <a href="../blog/2022/">2022 (1)</a>
+  </li>
+    
   <li>
     <a href="../blog/2021/">2021 (3)</a>
   </li>
