--- a/games/index.html
+++ b/games/index.html
@@ -74,6 +74,10 @@
   </span>
   <span>&nbsp;</span>
   <span style="float: right">
+     Next: 
+    <a href="../2022_start_planning/">
+      2022 新年计划 
+    </a>
     
   </span>
 </div>
@@ -105,6 +109,12 @@
 <ul>
    
   <li>
+    <a href="../2022_start_planning/"
+      >01 January - 2022 新年计划</a
+    >
+  </li>
+  
+  <li>
     <a href="../feed_dog_tips/"
       >30 June - 育狗指南</a
     >
@@ -135,6 +145,10 @@
 </h3>
 <ul>
    
+  <li>
+    <a href="../blog/2022/">2022 (1)</a>
+  </li>
+    
   <li>
     <a href="../blog/2021/">2021 (3)</a>
   </li>
