--- a/genindex/index.html
+++ b/genindex/index.html
@@ -72,12 +72,6 @@
   </li>
   
   <li>
-    <a href="../games/"
-      >22 November - Games</a
-    >
-  </li>
-  
-  <li>
     <a href="../feed_dog_tips/"
       >30 June - 育狗指南</a
     >
@@ -95,6 +89,12 @@
     >
   </li>
   
+  <li>
+    <a href="../engineer_not_developer/"
+      >21 November - Engineer not Developer</a
+    >
+  </li>
+  
 </ul>
 
 <h3>
@@ -107,7 +107,7 @@
   </li>
     
   <li>
-    <a href="../blog/2021/">2021 (3)</a>
+    <a href="../blog/2021/">2021 (2)</a>
   </li>
     
   <li>
