--- a/search/index.html
+++ b/search/index.html
@@ -91,12 +91,6 @@
   </li>
   
   <li>
-    <a href="../games/"
-      >22 November - Games</a
-    >
-  </li>
-  
-  <li>
     <a href="../feed_dog_tips/"
       >30 June - 育狗指南</a
     >
@@ -114,6 +108,12 @@
     >
   </li>
   
+  <li>
+    <a href="../engineer_not_developer/"
+      >21 November - Engineer not Developer</a
+    >
+  </li>
+  
 </ul>
 
 <h3>
@@ -126,7 +126,7 @@
   </li>
     
   <li>
-    <a href="../blog/2021/">2021 (3)</a>
+    <a href="../blog/2021/">2021 (2)</a>
   </li>
     
   <li>
