--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,14 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=0.9, maximum-scale=0.9" />
 <link href="https://fonts.googleapis.com/css?family=Lato|Roboto+Mono" rel="stylesheet">
-  
+ 
+<link
+  rel="alternate"
+  type="application/atom+xml"
+  href="../blog/atom.xml"
+  title="Lost my pieces"
+/>
+ 
 <style type="text/css">
   ul.ablog-archive {
     list-style: none;
@@ -92,31 +99,31 @@
 <ul>
    
   <li>
-    <a href="../2022_start_planning/"
+    <a href="../source/2022_start_planning/"
       >01 January - 2022 新年计划</a
     >
   </li>
   
   <li>
-    <a href="../feed_dog_tips/"
+    <a href="../source/feed_dog_tips/"
       >30 June - 育狗指南</a
     >
   </li>
   
   <li>
-    <a href="../2021_new_start/"
-      >01 February - 旧的回忆，新的开始</a
+    <a href="../source/2021_new_start/"
+      >01 February - 新的开始</a
     >
   </li>
   
   <li>
-    <a href="../a_hand/"
+    <a href="../source/a_hand/"
       >01 December - 一点小忙</a
     >
   </li>
   
   <li>
-    <a href="../engineer_not_developer/"
+    <a href="../source/engineer_not_developer/"
       >21 November - Engineer not Developer</a
     >
   </li>
