--- a/source/1/index.html
+++ b/source/1/index.html
@@ -146,6 +146,12 @@
 <ul>
    
   <li>
+    <a href="../6/"
+      >15 February - 假分数原理</a
+    >
+  </li>
+  
+  <li>
     <a href="../5/"
       >01 January - 2022 新年计划</a
     >
@@ -177,7 +183,7 @@
 <ul>
    
   <li>
-    <a href="../../blog/2022/">2022 (1)</a>
+    <a href="../../blog/2022/">2022 (2)</a>
   </li>
     
   <li>
