--- a/genindex/index.html
+++ b/genindex/index.html
@@ -66,6 +66,12 @@
 <ul>
    
   <li>
+    <a href="../source/6/"
+      >15 February - 假分数原理</a
+    >
+  </li>
+  
+  <li>
     <a href="../source/5/"
       >01 January - 2022 新年计划</a
     >
@@ -89,12 +95,6 @@
     >
   </li>
   
-  <li>
-    <a href="../source/1/"
-      >21 November - Engineer not Developer</a
-    >
-  </li>
-  
 </ul>
 
 <h3>
@@ -103,7 +103,7 @@
 <ul>
    
   <li>
-    <a href="../blog/2022/">2022 (1)</a>
+    <a href="../blog/2022/">2022 (2)</a>
   </li>
     
   <li>
