--- a/source/5/index.html
+++ b/source/5/index.html
@@ -128,6 +128,10 @@
   </span>
   <span>&nbsp;</span>
   <span style="float: right">
+     Next: 
+    <a href="../6/">
+      假分数原理 
+    </a>
     
   </span>
 </div>
@@ -189,6 +193,12 @@
 <ul>
    
   <li>
+    <a href="../6/"
+      >15 February - 假分数原理</a
+    >
+  </li>
+  
+  <li>
     <a href="../4/"
       >30 June - 育狗指南</a
     >
@@ -220,7 +230,7 @@
 <ul>
    
   <li>
-    <a href="../../blog/2022/">2022 (1)</a>
+    <a href="../../blog/2022/">2022 (2)</a>
   </li>
     
   <li>
