--- a/search/index.html
+++ b/search/index.html
@@ -85,6 +85,12 @@
 <ul>
    
   <li>
+    <a href="../source/7/"
+      >15 February - 避免家庭矛盾的技巧</a
+    >
+  </li>
+  
+  <li>
     <a href="../source/6/"
       >15 February - 假分数原理</a
     >
@@ -108,12 +114,6 @@
     >
   </li>
   
-  <li>
-    <a href="../source/2/"
-      >01 December - 勿以善小而不为</a
-    >
-  </li>
-  
 </ul>
 
 <h3>
@@ -122,7 +122,7 @@
 <ul>
    
   <li>
-    <a href="../blog/2022/">2022 (2)</a>
+    <a href="../blog/2022/">2022 (3)</a>
   </li>
     
   <li>
