--- a/source/6/index.html
+++ b/source/6/index.html
@@ -96,6 +96,10 @@
   </span>
   <span>&nbsp;</span>
   <span style="float: right">
+     Next: 
+    <a href="../7/">
+      避免家庭矛盾的技巧 
+    </a>
     
   </span>
 </div>
@@ -157,6 +161,12 @@
 <ul>
    
   <li>
+    <a href="../7/"
+      >15 February - 避免家庭矛盾的技巧</a
+    >
+  </li>
+  
+  <li>
     <a href="../5/"
       >01 January - 2022 新年计划</a
     >
@@ -180,12 +190,6 @@
     >
   </li>
   
-  <li>
-    <a href="../1/"
-      >21 November - Engineer not Developer</a
-    >
-  </li>
-  
 </ul>
 
 <h3>
@@ -194,7 +198,7 @@
 <ul>
    
   <li>
-    <a href="../../blog/2022/">2022 (2)</a>
+    <a href="../../blog/2022/">2022 (3)</a>
   </li>
     
   <li>
