--- a/source/4/index.html
+++ b/source/4/index.html
@@ -193,6 +193,12 @@
 <ul>
    
   <li>
+    <a href="../7/"
+      >15 February - 避免家庭矛盾的技巧</a
+    >
+  </li>
+  
+  <li>
     <a href="../6/"
       >15 February - 假分数原理</a
     >
@@ -216,12 +222,6 @@
     >
   </li>
   
-  <li>
-    <a href="../1/"
-      >21 November - Engineer not Developer</a
-    >
-  </li>
-  
 </ul>
 
 <h3>
@@ -230,7 +230,7 @@
 <ul>
    
   <li>
-    <a href="../../blog/2022/">2022 (2)</a>
+    <a href="../../blog/2022/">2022 (3)</a>
   </li>
     
   <li>
