--- a/about/index.html
+++ b/about/index.html
@@ -85,7 +85,7 @@
 
 
 
-<p class="blurb">For the elapsed life pieces and code snippets</p>
+<p class="blurb">For the elapsed pieces and whimsies</p>
 
 
 
