--- a/search/index.html
+++ b/search/index.html
@@ -71,7 +71,7 @@
 
 
 
-<p class="blurb">For the elapsed life pieces and code snippets</p>
+<p class="blurb">For the elapsed pieces and whimsies</p>
 
 
 
