--- a/source/2/index.html
+++ b/source/2/index.html
@@ -137,7 +137,7 @@
 
 
 
-<p class="blurb">For the elapsed life pieces and code snippets</p>
+<p class="blurb">For the elapsed pieces and whimsies</p>
 
 
 
