--- a/genindex/index.html
+++ b/genindex/index.html
@@ -52,7 +52,7 @@
 
 
 
-<p class="blurb">For the elapsed pieces and whimsies</p>
+<p class="blurb">For the elapsed pieces, whimsies and code snippets.</p>
 
 
 
