--- a/source/5/index.html
+++ b/source/5/index.html
@@ -179,7 +179,7 @@
 
 
 
-<p class="blurb">For the elapsed pieces and whimsies</p>
+<p class="blurb">For the elapsed pieces, whimsies and code snippets.</p>
 
 
 
