--- a/source/6/index.html
+++ b/source/6/index.html
@@ -147,7 +147,7 @@
 
 
 
-<p class="blurb">For the elapsed pieces and whimsies</p>
+<p class="blurb">For the elapsed pieces, whimsies and code snippets.</p>
 
 
 
