--- a/about/index.html
+++ b/about/index.html
@@ -85,7 +85,7 @@
 
 
 
-<p class="blurb">For the elapsed pieces, whimsies and code snippets.</p>
+<p class="blurb">Elapsed pieces, whimsies and code snippets.</p>
 
 
 
