--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 
 
-<p class="blurb">For the elapsed pieces, whimsies and code snippets.</p>
+<p class="blurb">Elapsed pieces, whimsies and code snippets.</p>
 
 
 
