--- a/genindex/index.html
+++ b/genindex/index.html
@@ -66,6 +66,12 @@
 <ul>
    
   <li>
+    <a href="../source/8/"
+      >30 April - Upgrade my computer</a
+    >
+  </li>
+  
+  <li>
     <a href="../source/7/"
       >15 February - 避免家庭矛盾的技巧</a
     >
@@ -89,12 +95,6 @@
     >
   </li>
   
-  <li>
-    <a href="../source/3/"
-      >01 February - 2021 新年计划</a
-    >
-  </li>
-  
 </ul>
 
 <h3>
@@ -103,7 +103,7 @@
 <ul>
    
   <li>
-    <a href="../blog/2022/">2022 (3)</a>
+    <a href="../blog/2022/">2022 (4)</a>
   </li>
     
   <li>
