--- a/search/index.html
+++ b/search/index.html
@@ -95,8 +95,14 @@
 <ul>
    
   <li>
+    <a href="../source/20220905/"
+      >05 September - Love is wise, hatred is foolish</a
+    >
+  </li>
+  
+  <li>
     <a href="../source/20220430/"
-      >30 April - Upgrade my computer</a
+      >30 April - Computer upgrade programme</a
     >
   </li>
   
@@ -115,12 +121,6 @@
   <li>
     <a href="../source/20210201/"
       >01 February - 2021 新年计划</a
-    >
-  </li>
-  
-  <li>
-    <a href="../source/20201201/"
-      >01 December - A hand to the old ones</a
     >
   </li>
   
@@ -172,7 +172,7 @@
 <ul>
    
   <li>
-    <a href="../blog/category//"> (6)</a>
+    <a href="../blog/category//"> (7)</a>
   </li>
    
 </ul>
@@ -183,7 +183,7 @@
 <ul>
    
   <li>
-    <a href="../blog/2022/">2022 (2)</a>
+    <a href="../blog/2022/">2022 (3)</a>
   </li>
     
   <li>
