--- a/source/20220101/index.html
+++ b/source/20220101/index.html
@@ -120,7 +120,7 @@
   <span style="float: right">
      Next: 
     <a href="../20220430/">
-      Upgrade my computer 
+      Computer upgrade programme 
     </a>
     
   </span>
@@ -183,8 +183,14 @@
 <ul>
    
   <li>
+    <a href="../20220905/"
+      >05 September - Love is wise, hatred is foolish</a
+    >
+  </li>
+  
+  <li>
     <a href="../20220430/"
-      >30 April - Upgrade my computer</a
+      >30 April - Computer upgrade programme</a
     >
   </li>
   
@@ -202,13 +208,7 @@
   
   <li>
     <a href="../20201201/"
-      >01 December - A hand to the old ones</a
-    >
-  </li>
-  
-  <li>
-    <a href="../20201121/"
-      >21 November - Engineer not Developer</a
+      >01 December - A hand to an old woman</a
     >
   </li>
   
@@ -260,7 +260,7 @@
 <ul>
    
   <li>
-    <a href="../../blog/category//"> (6)</a>
+    <a href="../../blog/category//"> (7)</a>
   </li>
    
 </ul>
@@ -271,7 +271,7 @@
 <ul>
    
   <li>
-    <a href="../../blog/2022/">2022 (2)</a>
+    <a href="../../blog/2022/">2022 (3)</a>
   </li>
     
   <li>
