--- a/source/20220430/index.html
+++ b/source/20220430/index.html
@@ -206,6 +206,12 @@
 <ul>
    
   <li>
+    <a href="../20220906/"
+      >06 September - 三十六计桌游篇（1/36）</a
+    >
+  </li>
+  
+  <li>
     <a href="../20220905/"
       >05 September - Love is wise, hatred is foolish</a
     >
@@ -226,12 +232,6 @@
   <li>
     <a href="../20210201/"
       >01 February - 2021 新年计划</a
-    >
-  </li>
-  
-  <li>
-    <a href="../20201201/"
-      >01 December - A hand to an old woman</a
     >
   </li>
   
@@ -271,8 +271,12 @@
 </style>
 <ul class="ablog-cloud">
    
-  <li class="ablog-cloud ablog-cloud-3">
+  <li class="ablog-cloud ablog-cloud-5">
     <a href="../../blog/tag//"></a>
+  </li>
+    
+  <li class="ablog-cloud ablog-cloud-1">
+    <a href="../../blog/tag/strategy/">Strategy</a>
   </li>
    
 </ul>
@@ -283,7 +287,7 @@
 <ul>
    
   <li>
-    <a href="../../blog/category//"> (7)</a>
+    <a href="../../blog/category//"> (8)</a>
   </li>
    
 </ul>
@@ -294,7 +298,7 @@
 <ul>
    
   <li>
-    <a href="../../blog/2022/">2022 (3)</a>
+    <a href="../../blog/2022/">2022 (4)</a>
   </li>
     
   <li>
