--- a/genindex/index.html
+++ b/genindex/index.html
@@ -66,6 +66,12 @@
 <ul>
    
   <li>
+    <a href="../source/20220906/"
+      >06 September - 三十六计桌游篇（1/36）</a
+    >
+  </li>
+  
+  <li>
     <a href="../source/20220905/"
       >05 September - Love is wise, hatred is foolish</a
     >
@@ -86,12 +92,6 @@
   <li>
     <a href="../source/20210630/"
       >30 June - 育狗指南</a
-    >
-  </li>
-  
-  <li>
-    <a href="../source/20210201/"
-      >01 February - 2021 新年计划</a
     >
   </li>
   
@@ -131,8 +131,12 @@
 </style>
 <ul class="ablog-cloud">
    
-  <li class="ablog-cloud ablog-cloud-3">
+  <li class="ablog-cloud ablog-cloud-5">
     <a href="../blog/tag//"></a>
+  </li>
+    
+  <li class="ablog-cloud ablog-cloud-1">
+    <a href="../blog/tag/strategy/">Strategy</a>
   </li>
    
 </ul>
@@ -143,7 +147,7 @@
 <ul>
    
   <li>
-    <a href="../blog/category//"> (7)</a>
+    <a href="../blog/category//"> (8)</a>
   </li>
    
 </ul>
@@ -154,7 +158,7 @@
 <ul>
    
   <li>
-    <a href="../blog/2022/">2022 (3)</a>
+    <a href="../blog/2022/">2022 (4)</a>
   </li>
     
   <li>
