--- a/source/20210201/index.html
+++ b/source/20210201/index.html
@@ -185,6 +185,12 @@
 <ul>
    
   <li>
+    <a href="../20220906/"
+      >06 September - 三十六计桌游篇（1/36）</a
+    >
+  </li>
+  
+  <li>
     <a href="../20220905/"
       >05 September - Love is wise, hatred is foolish</a
     >
@@ -205,12 +211,6 @@
   <li>
     <a href="../20210630/"
       >30 June - 育狗指南</a
-    >
-  </li>
-  
-  <li>
-    <a href="../20201201/"
-      >01 December - A hand to an old woman</a
     >
   </li>
   
@@ -250,8 +250,12 @@
 </style>
 <ul class="ablog-cloud">
    
-  <li class="ablog-cloud ablog-cloud-3">
+  <li class="ablog-cloud ablog-cloud-5">
     <a href="../../blog/tag//"></a>
+  </li>
+    
+  <li class="ablog-cloud ablog-cloud-1">
+    <a href="../../blog/tag/strategy/">Strategy</a>
   </li>
    
 </ul>
@@ -262,7 +266,7 @@
 <ul>
    
   <li>
-    <a href="../../blog/category//"> (7)</a>
+    <a href="../../blog/category//"> (8)</a>
   </li>
    
 </ul>
@@ -273,7 +277,7 @@
 <ul>
    
   <li>
-    <a href="../../blog/2022/">2022 (3)</a>
+    <a href="../../blog/2022/">2022 (4)</a>
   </li>
     
   <li>
