--- a/source/20220906/index.html
+++ b/source/20220906/index.html
@@ -116,7 +116,7 @@
 <dt>警下接金水的狼人</dt><dd><ul>
 <li><dl class="simple">
 <dt>最好是本身就站不对边和容易被骗的人设</dt><dd><ul>
-<li><p>就像不太可能有狼起跳去给JY好人发金水</p></li>
+<li><p>就像不太可能有狼起跳去给JY好人发金水，如果是JY这种就不要想着瞒天过海狗到最后了</p></li>
 <li><p>但狼人起跳发金水骗那种新手玩家的就很多</p></li>
 </ul>
 </dd>
