--- a/source/20221017/index.html
+++ b/source/20221017/index.html
@@ -81,12 +81,12 @@
 <p class="admonition-title">梦境一（2018/09/26）</p>
 <p>25分钟的语文试卷 八个词语 逻辑推理 7 8 9 11 停车场一样的地牢两次 yyyy 透拖把相遇 专注 下雨下雨 去找那个课程表 连续三节体育课</p>
 </div>
-<p>这个梦境里，大家都是高中生，平时要在25分钟完成现实里150分钟的试卷，答题速度和效率就成为了得分的关键。在校园人来人往的地方，你能看到一个普通停车场一样的入口，蜿蜒弯曲的石阶指向地底。这是一个普通的高中，车库入口之外是平静的现世，入口深处却是燃烧的地狱和不得见人的秘密地牢=，=我们就生活在这样的天堂地狱交界之处，一次我从地底透拖把回来，遇到了迎面而来的女主角，我们在不同时间相向而遇了两次，都曾从天堂去地狱，从地狱去天堂，但每一次都擦肩而过，相对无言，或者说我有很多话想说，但每一次时机都转瞬即逝。直到某天我在学校外的操场上体育课，不知怎么就风云突变世界末日了，整个世界与其说在下雨，更像是江河倒灌，我需要在校外找到课程表作为去找她的 <code class="docutils literal notranslate"><span class="pre">钥匙</span></code> ，可是等我在一座荒朽的小楼的一层墙上找到课程表时，它又变成了我生平遇到过的最难解的题目，我也不知道那个8个词语逻辑78911是个什么脑洞题目了0.0但无论如何，这真是一个无比印象深刻的梦，这么打字描绘出来真的难以概括当时万一的感觉。到快最后，依稀记得在车库深处的地狱里逃命的画面了，脚下是沸腾燃烧不断上升的岩浆，我们攥着墙壁上脆弱的铁杆和绳索摇曳着……</p>
+<p>这个梦境里，大家都是高中生，平时要在25分钟完成现实里150分钟的试卷，答题速度和效率就成为了得分的关键。在校园人来人往的地方，你能看到一个普通停车场一样的入口，蜿蜒弯曲的石阶指向地底。这是一个普通的高中，车库入口之外是平静的现世，入口深处却是燃烧的地狱和不为人知的秘密地牢=，=我们就生活在这样的天堂地狱交界之处，一次我从地底透拖把回来（不知道为什么，每一次下地狱去干一些奇奇怪怪的事情，大家都默契的拿透拖把做理由），遇到了迎面而来的女主角，我们在不同时间相向而遇了两次，都曾从天堂去地狱，从地狱去天堂，但每一次都擦肩而过，相对无言，或者说我有很多话想说，但每一次时机都转瞬即逝。直到某天我在学校外的操场上体育课，不知怎么就风云突变世界末日了，整个世界与其说在下雨，更像是江河倒灌，我需要在校外找到课程表作为去找她的 <code class="docutils literal notranslate"><span class="pre">钥匙</span></code> ，可是等我在一座荒朽的小楼的一层墙上找到课程表时，它又变成了我生平遇到过的最难解的题目，我也不知道那个8个词语逻辑78911是个什么脑洞题目了0.0到快结局时，依稀记得在车库深处的地狱里逃命的画面了，脚下是沸腾燃烧不断上升的岩浆，我们攥着墙壁上脆弱的铁杆和绳索摇曳着……</p>
 <div class="admonition- admonition">
 <p class="admonition-title">梦境二（2018/09/27）</p>
 <p>丢手机 0721餐馆 家长 谈伍 倒数后两排 物理课讲棋类游戏 点名回答问题 两个人唱反调 721楼下 不宜久留 后事交代</p>
 </div>
-<p>这个梦我记得靠前一幕是在物理课上讲棋类游戏和博弈相关的知识，因为我很擅长这个，随意我还回答了老师很多问题，用物理知识解决棋类问题。（可恶别的都忘记了）倒数第二幕里我们和很多同伴在一个很大的仓库里追击恶徒，那个仓库的吊顶上居然挂着一辆很大的跑车，当恶徒最后被我们包围的时候他居然破坏了吊顶，然后车掉下来引起大爆炸我们就开始疯狂逃命，这个梦最独特的点在于，等我和她逃出滚滚浓烟仓库走进最后的大巴车就要得救的时候，车的设定是必须一人一个位置坐好才能发车，我们便上车往后慢慢走，在前排看到了坐在一起的谈伍，（是我以前在Lufax时候的一对同事CP，好喜欢他们虽然他们现在应该分手了）。可是就是那么一个设计规整的车，每排左右各两个座位，等我们慢慢走慢慢走到唯一看上去有空座的倒数第二排的一侧的时候，发现那里很夸张的只有一个位置，靠窗的那边什么都没有，车上居然只剩了最后一个座位。那种预示感带来的冲击我现在都还无法忘记……梦境有时候真的很不讲道理，可能大约是说我和她其实不合适吧</p>
+<p>这个梦我记得靠前一幕是在物理课上讲棋类游戏和博弈相关的知识，因为我很擅长这个，随意我还回答了老师很多问题，用物理知识解决棋类问题。（可恶别的都忘记了）倒数第二幕里我们和很多同伴在一个很大的仓库里追击恶徒，那个仓库的吊顶上居然挂着一辆很大的装甲车，当恶徒最后被我们包围的时候他居然破坏了吊顶，然后车掉下来引起大爆炸我们就开始疯狂逃命，这个梦最独特的点在于，等我和她逃出滚滚浓烟仓库走进最后的大巴车就要得救的时候，车的设定是必须一人一个位置坐好才能发车，我们便上车往后慢慢走，在前排看到了坐在一起的谈伍，（是我以前在Lufax时候的一对同事CP，好喜欢他们虽然他们现在应该分手了）。可是就是那么一个设计规整的车，每排左右各两个座位，等我们慢慢走慢慢走到唯一看上去有空座的倒数第二排的一侧的时候，发现那里完全意外地只有一个位置，靠窗的那边什么都没有，车上居然只剩了最后一个座位。那种预示感带来的冲击我现在都难以释怀……梦境有时候真的很不讲道理，可能大约是说我和她其实不合适吧</p>
 <p>中间省略若干我已经看到关键字都回忆不起的……难过</p>
 <div class="admonition- admonition">
 <p class="admonition-title">梦境三（2022/10/17）</p>
