--- a/genindex/index.html
+++ b/genindex/index.html
@@ -67,6 +67,12 @@
 <ul>
    
   <li>
+    <a href="../source/20221123/"
+      >23 November - 最近的成就感</a
+    >
+  </li>
+  
+  <li>
     <a href="../source/20221017/"
       >17 October - 潦草的梦</a
     >
@@ -87,12 +93,6 @@
   <li>
     <a href="../source/20220430/"
       >30 April - Computer upgrade programme</a
-    >
-  </li>
-  
-  <li>
-    <a href="../source/20220101/"
-      >01 January - 2022 新年计划</a
     >
   </li>
   
@@ -148,7 +148,7 @@
 <ul>
    
   <li>
-    <a href="../blog/category//"> (9)</a>
+    <a href="../blog/category//"> (10)</a>
   </li>
    
 </ul>
@@ -159,7 +159,7 @@
 <ul>
    
   <li>
-    <a href="../blog/2022/">2022 (5)</a>
+    <a href="../blog/2022/">2022 (6)</a>
   </li>
     
   <li>
