--- a/source/20220101/index.html
+++ b/source/20220101/index.html
@@ -184,6 +184,12 @@
 <ul>
    
   <li>
+    <a href="../20221123/"
+      >23 November - 最近的成就感</a
+    >
+  </li>
+  
+  <li>
     <a href="../20221017/"
       >17 October - 潦草的梦</a
     >
@@ -204,12 +210,6 @@
   <li>
     <a href="../20220430/"
       >30 April - Computer upgrade programme</a
-    >
-  </li>
-  
-  <li>
-    <a href="../20210630/"
-      >30 June - 育狗指南</a
     >
   </li>
   
@@ -265,7 +265,7 @@
 <ul>
    
   <li>
-    <a href="../../blog/category//"> (9)</a>
+    <a href="../../blog/category//"> (10)</a>
   </li>
    
 </ul>
@@ -276,7 +276,7 @@
 <ul>
    
   <li>
-    <a href="../../blog/2022/">2022 (5)</a>
+    <a href="../../blog/2022/">2022 (6)</a>
   </li>
     
   <li>
