--- a/source/20221017/index.html
+++ b/source/20221017/index.html
@@ -109,6 +109,10 @@
   </span>
   <span>&nbsp;</span>
   <span style="float: right">
+     Next: 
+    <a href="../20221123/">
+      最近的成就感 
+    </a>
     
   </span>
 </div>
@@ -170,6 +174,12 @@
 <ul>
    
   <li>
+    <a href="../20221123/"
+      >23 November - 最近的成就感</a
+    >
+  </li>
+  
+  <li>
     <a href="../20220906/"
       >06 September - 三十六计桌游篇（1/36）</a
     >
@@ -190,12 +200,6 @@
   <li>
     <a href="../20220101/"
       >01 January - 2022 新年计划</a
-    >
-  </li>
-  
-  <li>
-    <a href="../20210630/"
-      >30 June - 育狗指南</a
     >
   </li>
   
@@ -251,7 +255,7 @@
 <ul>
    
   <li>
-    <a href="../../blog/category//"> (9)</a>
+    <a href="../../blog/category//"> (10)</a>
   </li>
    
 </ul>
@@ -262,7 +266,7 @@
 <ul>
    
   <li>
-    <a href="../../blog/2022/">2022 (5)</a>
+    <a href="../../blog/2022/">2022 (6)</a>
   </li>
     
   <li>
