--- a/source/20210630/index.html
+++ b/source/20210630/index.html
@@ -196,6 +196,12 @@
 <ul>
    
   <li>
+    <a href="../20221123/"
+      >23 November - 最近的成就感</a
+    >
+  </li>
+  
+  <li>
     <a href="../20221017/"
       >17 October - 潦草的梦</a
     >
@@ -216,12 +222,6 @@
   <li>
     <a href="../20220430/"
       >30 April - Computer upgrade programme</a
-    >
-  </li>
-  
-  <li>
-    <a href="../20220101/"
-      >01 January - 2022 新年计划</a
     >
   </li>
   
@@ -277,7 +277,7 @@
 <ul>
    
   <li>
-    <a href="../../blog/category//"> (9)</a>
+    <a href="../../blog/category//"> (10)</a>
   </li>
    
 </ul>
@@ -288,7 +288,7 @@
 <ul>
    
   <li>
-    <a href="../../blog/2022/">2022 (5)</a>
+    <a href="../../blog/2022/">2022 (6)</a>
   </li>
     
   <li>
