--- a/source/20220906/index.html
+++ b/source/20220906/index.html
@@ -256,6 +256,12 @@
 <ul>
    
   <li>
+    <a href="../20221123/"
+      >23 November - 最近的成就感</a
+    >
+  </li>
+  
+  <li>
     <a href="../20221017/"
       >17 October - 潦草的梦</a
     >
@@ -276,12 +282,6 @@
   <li>
     <a href="../20220101/"
       >01 January - 2022 新年计划</a
-    >
-  </li>
-  
-  <li>
-    <a href="../20210630/"
-      >30 June - 育狗指南</a
     >
   </li>
   
@@ -337,7 +337,7 @@
 <ul>
    
   <li>
-    <a href="../../blog/category//"> (9)</a>
+    <a href="../../blog/category//"> (10)</a>
   </li>
    
 </ul>
@@ -348,7 +348,7 @@
 <ul>
    
   <li>
-    <a href="../../blog/2022/">2022 (5)</a>
+    <a href="../../blog/2022/">2022 (6)</a>
   </li>
     
   <li>
