--- a/20220905/index.html
+++ b/20220905/index.html
@@ -147,31 +147,31 @@
   
   <li>
     <a href="../20221123/">
-      23 十一月 - 最近的成就感
+      23 November - 最近的成就感
     </a>
   </li>
   
   <li>
     <a href="../20221017/">
-      17 十月 - 潦草的梦
+      17 October - 潦草的梦
     </a>
   </li>
   
   <li>
     <a href="../20220906/">
-      06 九月 - 三十六计桌游篇（1/36）
+      06 September - 三十六计桌游篇（1/36）
     </a>
   </li>
   
   <li>
     <a href="../20220430/">
-      30 四月 - Computer upgrade programme
+      30 April - Computer upgrade programme
     </a>
   </li>
   
   <li>
     <a href="../20220101/">
-      01 一月 - 2022 新年计划
+      01 January - 2022 新年计划
     </a>
   </li>
   
