--- a/20221017/index.html
+++ b/20221017/index.html
@@ -157,7 +157,7 @@
     
     <li>
       <a href="../20220430/">
-        30 April - Computer upgrade programme
+        30 April - 电脑升级计划
       </a>
     </li>
     
